isolette/hamr/microkit-initial/components/thermostat_rt_mhs_mhs/include/thermostat_rt_mhs_mhs.h

#pragma once

#include <printf.h>
#include <util.h>
#include <stdint.h>
#include <microkit.h>
#include <sb_types.h>

// Do not edit this file as it will be overwritten if codegen is rerun


bool get_upper_desired_temp(base_Isolette_Data_Model_Temp_i *data);
bool get_lower_desired_temp(base_Isolette_Data_Model_Temp_i *data);
bool put_heat_control(const base_Isolette_Data_Model_On_Off_Type *data);
bool get_regulator_mode(base_Isolette_Data_Model_Regulator_Mode_Type *data);
bool get_current_tempWstatus(base_Isolette_Data_Model_TempWstatus_i *data);