isolette/rust-prototyping/v-isolette/hamr/microkit/crates/thermostat_rt_mhs_mhs/src/api.rs

#![allow(dead_code)]
#![allow(non_snake_case)]

// Do not edit this file as it will be overwritten if codegen is rerun

use types::Isolette_Data_Model::*;

#[cfg(not(test))]
extern "C" {
  pub fn get_upper_desired_temp(data: *mut Temp_i) -> bool;
  pub fn get_lower_desired_temp(data: *mut Temp_i) -> bool;
  pub fn put_heat_control(data: *mut On_Off) -> bool;
  pub fn get_regulator_mode(data: *mut Regulator_Mode) -> bool;
  pub fn get_current_tempWstatus(data: *mut TempWstatus_i) -> bool;
}

pub fn unsafe_get_upper_desired_temp(data: *mut Temp_i) -> bool {
  return unsafe { get_upper_desired_temp(data) };
}

pub fn unsafe_get_lower_desired_temp(data: *mut Temp_i) -> bool {
  return unsafe { get_lower_desired_temp(data) };
}

pub fn unsafe_put_heat_control(data: *mut On_Off) -> bool {
  return unsafe { put_heat_control(data) };
}

pub fn unsafe_get_regulator_mode(data: *mut Regulator_Mode) -> bool {
  return unsafe { get_regulator_mode(data) };
}

pub fn unsafe_get_current_tempWstatus(data: *mut TempWstatus_i) -> bool {
  return unsafe { get_current_tempWstatus(data) };
}

#[cfg(test)]
pub fn put_heat_control(data: *mut On_Off) -> bool {
  panic!("implement me");
}

#[cfg(test)]
pub fn get_upper_desired_temp(data: *mut Temp_i) -> bool {
  panic!("implement me");
}

#[cfg(test)]
pub fn get_lower_desired_temp(data: *mut Temp_i) -> bool {
  panic!("implement me");
}

#[cfg(test)]
pub fn get_regulator_mode(data: *mut Regulator_Mode) -> bool {
  panic!("implement me");
}

#[cfg(test)]
pub fn get_current_tempWstatus(data: *mut TempWstatus_i) -> bool {
  panic!("implement me");
}